Renamed and expanded

--- a/src/Rixian.Drive.Common.Tests/Rixian.Drive.Common.Tests.csproj
+++ b/src/Rixian.Drive.Common.Tests/Rixian.Drive.Common.Tests.csproj
@@ -10,7 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Library\Library.csproj" />
+    <ProjectReference Include="..\Rixian.Drive.Common\Rixian.Drive.Common.csproj" />
   </ItemGroup>
 
   <ItemGroup>
